--- a/postgres2-conf/patroni.yml
+++ b/postgres2-conf/patroni.yml
@@ -107,7 +107,7 @@ postgresql:
   connect_address: 127.0.0.1:5432
 
 #  proxy_address: 127.0.0.1:5433  # The address of connection pool (e.g., pgbouncer) running next to Patroni/Postgres. Only for service discovery.
-  data_dir: data/postgresql0
+  data_dir: /opt/postgres/data
 #  bin_dir:
 #  config_dir:
   pgpass: /tmp/pgpass0
@@ -127,7 +127,7 @@ postgresql:
     # Fully qualified kerberos ticket file for the running user
     # same as KRB5CCNAME used by the GSS
 #   krb_server_keyfile: /var/spool/keytabs/postgres
-    unix_socket_directories: '..'  # parent directory of data_dir
+    unix_socket_directories: '/opt/postgres'  # parent directory of data_dir
   # Additional fencing script executed after acquiring the leader lock but before promoting the replica
   #pre_promote: /path/to/pre_promote.sh
 
